Revision history for Module-CPANTS-Analyse

0.97_10 2018-04-22
  - no changes; for testing

0.97_09 2018-04-22
  - no changes; for testing

0.97_08 2018-04-22
  - no changes; for testing

0.97_07 2018-04-22
  - no changes; for testing

0.97_06 2018-04-22
  - no changes; for testing

0.97_05 2018-04-22
  - no changes; for testing

0.97_04 2018-04-21
  - Skip everything in MANIFEST.SKIP while testing symlinks (GH#33, Tux++)

0.97_03 2016-09-01
  - Not to check use_strict/use_warnings for Perl 6 modules in a
    Perl 5 distribution (Stefan Seifert++)
  - Worked around a File::Find::Object issue (reported by dolmen)
  - Fixed dynamic_config handling (David Golden++)
  - Improved LICENSE file detection (RT#114247)

0.97_02 2016-04-27
  - Requires List::Util 1.33

0.97_01 2016-04-24
  - Added has_meta_json metric (RT#107885)
  - Accept a few more README extensions (mrcaron)
  - Accept two more Moose modules as strict equivalents
  - Various micro optimization for performance
  - Dropped a few dependencies
  - Doc patch from brac-mac and joenio

0.96 2014-11-24
  - Added an import option to load extra Kwalitee plugins.
  - Fixed RT#100512 - has_readme now accepts README.pod as well
  - Improved no_abstract_stub_in_pod to detect "The great new"
    as a boilerplate
  - Switched to File::Find::Object

0.95 2014-09-26
  - Switched to Test::FailWarnings to make CPAN testers happier

0.94 2014-09-26
  - Fixed RT#99141 - use_strict metric does not recognize
    `use v5.14` syntax (ishigaki)

0.93_04 2014-09-05
  - Accept COPYING as a license file
  - Take included module (under inc/) into consideration while
    analyzing prereq_matches_use
  - Changed most of the META.yml metrics to pass if META.yml doesn't
    exist

0.93_03 2014-08-13
  - Added meta_json_is_parsable and meta_json_conforms_to_known_spec
  - Added meta_yml_has_repository_resource
  - Renamed metayml_ metrics to meta_yml_
  - Fixed abstract encoding issues
  - Refactored tests