@@ -21,4 +21,7 @@ xt::kwalitee::Test::run(
 
   # invalid =encoding (utf-8;)
   ['INGY/IO-All-0.40.tar.gz', 0],
+
+  # script name with a dash instead of package name
+  ['SKIRMESS/App-ReportPrereqs-0.001.tar.gz', 0]
 );
